--- a/styles/main.css
+++ b/styles/main.css
@@ -129,3 +129,9 @@ padding: 50px;
 .cli_img {
  display: inline-block!important;
 }
+
+#lista1 li {
+    display:inline;
+    padding-left:3px;
+    padding-right:3px;
+}
