--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,7 @@ body{
 }
 
 
+
 h1{
     text-align: center;
     font-family: Helvetica;
@@ -11,9 +12,16 @@ h1{
     font-size: 36px;
 }
 
+section{
+    text-align: center;
+}
+
 table{
     border: 0px;
+    
 }
+
+
 
 .input-formulario{
     background: #FFFFFF;
@@ -52,6 +60,7 @@ padding: 50px;
     color: #F8F8F8;
     padding: 50px;
     height: 318px;
+   
 }
 
 .portafolio{
@@ -67,6 +76,9 @@ padding: 50px;
 
 }
 
+.centrar_contenido{
+    display: inline-block;
+}
 .clientes{
     background: #3F4E62;
     font-family: Arial;
@@ -180,6 +192,13 @@ padding: 50px;
    .link:hover {
     transform: scale(1.2);
   }
+
+  .link2:hover{
+    transform: scale(1.15);
+    transition: all 1s linear;
+  }
+ 
+
 
   .text {
     text-shadow: 2px 4px cadetblue, -2px -4px blue;
