--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,7 @@ body{
 
 h1{
     text-align: center;
-    font-family: Helvetica;
+    font-family: 'Dancing Script', cursive;
     font-style: normal;
     font-weight: bold;
     font-size: 36px;
