--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,7 @@ body{
 
 h1{
     text-align: center;
-    font-family: 'Dancing Script', cursive;
+    font-family: Helvetica;
     font-style: normal;
     font-weight: bold;
     font-size: 36px;
@@ -198,7 +198,6 @@ padding: 50px;
     transition: all 1s linear;
   }
  
-
 
   .text {
     text-shadow: 2px 4px cadetblue, -2px -4px blue;
